@@ -360,6 +360,7 @@ Magnus Kessler
 Lawrence Kesteloot
 Vivek Khera
 Mads Kiilerich
+Taek Joo Kim
 Steve Kirsch
 Ron Klatchko
 Bastian Kleineidam
